client_app/k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dreams-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.thedreamscollective.org
    secretName: dreams-tls
  rules:
  - host: www.thedreamscollective.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
